[tool.poetry]
name = "dems"
version = "0.9.0"
description = "DESHIMA measurement set by DataArray"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
xarray-dataclasses = "^1.7"

[tool.poetry.group.dev.dependencies]
black = "^23.11"
ipython = "^8.18"
pyright = "^1.1"
pytest = "^7.4"

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
