[tool.poetry]
name = "dems"
version = "2024.7.2"
description = "DESHIMA measurement set by DataArray"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
xarray-dataclasses = "^1.8"

[tool.poetry.group.dev.dependencies]
black = "^24.4"
ipython = "^8.18"
pyright = "^1.1"
pytest = "^8.2"

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
