[project]
name = "dems"
version = "2025.6.1"
description = "DESHIMA Measurement Set"
readme = "README.md"
keywords = [
    "astronomy",
    "data-format",
    "deshima",
    "measurement-set",
    "spectroscopy",
    "submillimeter",
]
requires-python = ">=3.9,<3.14"
dependencies = ["xarray-dataclasses>=1.8,<2.0"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[[project.authors]]
name = "Akio Taniguchi"
email = "taniguchi.akio@gmail.com"

[project.license]
file = "LICENSE"

[project.urls]
homepage = "https://github.com/deshima-dev/dems"
repository = "https://github.com/deshima-dev/dems"

[dependency-groups]
dev = [
    "black>=25,<26",
    "ipython>=8,<10",
    "pyright>=1,<2",
    "pytest>=8,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "basic"
